[gd_scene load_steps=3 format=3 uid="uid://2npewlphyple"]

[ext_resource type="Theme" uid="uid://7xe3ua6la8hr" path="res://new_theme.tres" id="1_d12c4"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="2_qph58"]

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_d12c4")
script = ExtResource("2_qph58")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -30.0
offset_right = 36.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 0
text = "Media"
vertical_alignment = 1

[node name="SFXLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 0
text = "Notifications"
vertical_alignment = 1

[node name="BotLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 0
text = "Calling"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Music" type="HSlider" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -6.0
max_value = 6.0

[node name="SFX" type="HSlider" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -6.0
max_value = 6.0

[node name="Bot" type="HSlider" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -6.0
max_value = 6.0

[connection signal="value_changed" from="HBoxContainer/VBoxContainer2/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer2/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer2/Bot" to="." method="_on_bot_value_changed"]
